# Man10BankService/Repositories/ServerLoanRepository.cs
@@ -14,6 +14,7 @@ public class ServerLoanRepository(IDbContextFactory<BankDbContext> factory)
         RepaySuccess,
         RepayFailure,
         Interest,
+        SetBorrowAmount,
     }
 
     public async Task<ServerLoan> GetOrCreateByUuidAsync(string uuid)
@@ -111,6 +112,26 @@ public class ServerLoanRepository(IDbContextFactory<BankDbContext> factory)
 
         loan.PaymentAmount = paymentAmount;
         db.Update(loan);
+        await db.SaveChangesAsync();
+        await tx.CommitAsync();
+        return loan;
+    }
+
+    public async Task<ServerLoan?> SetBorrowAmountAsync(string uuid, decimal borrowAmount, decimal paymentAmount)
+    {
+        if (borrowAmount < 0m) throw new ArgumentException("借入残額は 0 以上で指定してください。", nameof(borrowAmount));
+        if (paymentAmount < 0m) throw new ArgumentException("支払額は 0 以上で指定してください。", nameof(paymentAmount));
+
+        await using var db = await factory.CreateDbContextAsync();
+        await using var tx = await db.Database.BeginTransactionAsync();
+
+        var loan = await GetOrCreateByUuidAsync(uuid);
+        var delta = borrowAmount - loan.BorrowAmount;
+
+        loan.BorrowAmount = borrowAmount;
+        loan.PaymentAmount = paymentAmount;
+        db.Update(loan);
+        await AddLogAsync(db, loan.Uuid, loan.Player, ServerLoanLogAction.SetBorrowAmount, delta);
         await db.SaveChangesAsync();
         await tx.CommitAsync();
         return loan;
